--- a/dashboard/kuboard.yaml
+++ b/dashboard/kuboard.yaml
@@ -112,6 +112,20 @@ subjects:
   namespace: kube-system
 
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: kuboard-viewer-pvp
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:persistent-volume-provisioner
+subjects:
+- kind: ServiceAccount
+  name: kuboard-viewer
+  namespace: kube-system
+
+---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
