--- a/dashboard/kuboard.yaml
+++ b/dashboard/kuboard.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: kuboard
-        image: eipwork/kuboard:v1.0.0-beta.6
+        image: eipwork/kuboard:latest
         imagePullPolicy: Always
 
 ---
